--- a/_posts/2019-05-16-one.md
+++ b/_posts/2019-05-16-one.md
@@ -1,7 +1,7 @@
 ---
 title: "Quick-Start Guide"
 #permalink: /games/quick-start-guide/
-permalink: /docs/quick-start-guide/
+permalink: /ac/Quick/
 category: 1
 excerpt: "How to quickly install and setup Minimal Mistakes for use with GitHub Pages."
 last_modified_at: 2019-04-18T15:53:52-04:00
