--- a/_posts/2019-05-16-three.md
+++ b/_posts/2019-05-16-three.md
@@ -1,7 +1,7 @@
 ---
 title: "세번째"
 category: Assassin's Creed Odyssey
-permalink: /docs/quick-start-guide/
+permalink: /aco/third/
 excerpt: "How to quickly install and setup Minimal Mistakes for use with GitHub Pages."
 last_modified_at: 2019-04-18T15:53:52-04:00
 redirect_from:
