--- a/__posts/2019-05-16-one.md
+++ b/__posts/2019-05-16-one.md
@@ -5,7 +5,7 @@ permalink: /aco/Quick/
 category: 1
 excerpt: "How to quickly install and setup Minimal Mistakes for use with GitHub Pages."
 last_modified_at: 2019-04-18T15:53:52-04:00
-toc: true
+toc: false
 ---
 
 1
