설정 및 테스트 완료

--- a/__posts/2019-05-16-three.md
+++ b/__posts/2019-05-16-three.md
@@ -1,6 +1,6 @@
 ---
 title: "세번째"
-category: Assassin's Creed Odyssey
+category: 1Assassin's Creed Odyssey
 permalink: /aco/third/
 excerpt: "How to quickly install and setup Minimal Mistakes for use with GitHub Pages."
 last_modified_at: 2019-04-18T15:53:52-04:00
