--- a/__posts/2019-05-17-test3.md
+++ b/__posts/2019-05-17-test3.md
@@ -2,7 +2,7 @@
 title: "test3"
 #permalink: /games/quick-start-guide/
 permalink: /aco/:title/
-category: Assassin's Creed Odyssey
+category: 3Assassin's Creed Odyssey
 excerpt: "How to quickly install and setup Minimal Mistakes for use with GitHub Pages."
 last_modified_at: 2019-04-18T15:53:52-04:00
 toc: true
