--- a/__posts/2019-05-16-two.md
+++ b/__posts/2019-05-16-two.md
@@ -1,6 +1,6 @@
 ---
 title: "두번째"
-category: Assassin's Creed Odyssey
+category: 2Bssassin's
 permalink: /aco/second/
 excerpt: "How to quickly install and setup Minimal Mistakes for use with GitHub Pages."
 last_modified_at: 2019-04-18T15:53:52-04:00
